[project]
name = "fuzzy-onions"
version = "0.1.0"
description = "FlyBase scRNAseq scripts"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Damien Goutte-Gattat", email = "dpg44@cam.ac.uk"}
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]
requires-python = ">=3.9"
dependencies = [
    "click-shell >=2.1",
    "pandas",
    "ipython",
    "pyyaml",
    "psycopg2",
    "pronto",
    "requests",
    "pymupdf",
    "llm",
    "sssom"
]

[project.urls]
Repository = "https://github.com/FlyBase/fuzzy-onions"

[project.scripts]
fzo = "fbcam.fuzzyonions.main:main"

[dependency-groups]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "fbcam.fuzzyonions"
source-include = ["docs/*"]

[tool.black]
skip-string-normalization = true

[tool.isort]
profile = "black"

